@startuml
top to bottom direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
title Biểu đồ lớp thực thể tổng thể của hệ thống\nMức mô hình: Specification
class User <<entity>> {
  username
  email
  role
  status
}
class Game <<entity>> {
  name
  originalPrice
  releaseDate
  isVisible
}
class Developer <<entity>> { name }
class Publisher <<entity>> { name }
class Category <<entity>> { name }
class GameMedia <<entity>> { type\npath\nsortOrder }
class Cart <<entity>>
class CartItem <<entity>> { addedAt }
class Wishlist <<entity>>
class WishlistItem <<entity>> { addedAt }
class Order <<entity>> { totalAmount\nstatus }
class OrderItem <<entity>> { originalPrice\ndiscountAmount\npaidPrice }
class Payment <<entity>> { amount\nstatus }
class LibraryItem <<entity>> { purchasedAt\nstatus }
class Review <<entity>> { content\nrecommended\nisVisible }
class Promotion <<entity>> { name\ndiscountValue\nstartAt\nendAt\nstatus }
class GamePromotion <<entity>>

User "1" -- "0..1" Cart : sở hữu
Cart "1" *-- "0..*" CartItem : chứa
CartItem "0..*" -- "1" Game : tham chiếu

User "1" -- "1" Wishlist : sở hữu
Wishlist "1" *-- "0..*" WishlistItem : chứa
WishlistItem "0..*" -- "1" Game : tham chiếu

User "1" -- "0..*" Order : đặt
Order "1" *-- "1..*" OrderItem : gồm
OrderItem "0..*" -- "1" Game : mua
Order "1" *-- "0..1" Payment : thanh toán

User "1" -- "0..*" LibraryItem : sở hữu
LibraryItem "0..*" -- "1" Game : cấp quyền với
OrderItem "1" -- "0..1" LibraryItem : tạo quyền sở hữu

User "1" -- "0..*" Review : viết
Review "0..*" -- "1" Game : đánh giá

Developer "1" -- "0..*" Game : phát triển
Publisher "1" -- "0..*" Game : phát hành
Game "0..*" -- "0..*" Category : thuộc
Game "1" *-- "0..*" GameMedia : có

Promotion "1" -- "0..*" GamePromotion : gồm
Game "1" -- "0..*" GamePromotion : áp dụng
User "1" -- "0..*" Promotion : tạo {role = Administrator}
@enduml
